--- a/index.html
+++ b/index.html
@@ -56,17 +56,21 @@
                 aria-label="Slide 2"></button>
             <button type="button" data-mdb-target="#carouselExampleCrossfade" data-mdb-slide-to="2"
                 aria-label="Slide 3"></button>
+            <button type="button" data-mdb-target="#carouselExampleCrossfade" data-mdb-slide-to="3"
+                aria-label="Slide 4"></button>
         </div>
         <div class="carousel-inner">
             <div class="carousel-item active">
-                <img src="img/c1.png" class="d-block w-100"
-                    alt="Wild Landscape" />
+                <img src="img/crousel3.png" class="d-block w-100" alt="Indian cow eating fresh grass at Jeevan Dairy" />
             </div>
             <div class="carousel-item">
-                <img src="https://mdbcdn.b-cdn.net/img/new/slides/042.webp" class="d-block w-100" alt="Camera" />
+                <img src="img/crousel4.png" class="d-block w-100" alt="Happy farmer" />
             </div>
             <div class="carousel-item">
-                <img src="https://mdbcdn.b-cdn.net/img/new/slides/043.webp" class="d-block w-100" alt="Exotic Fruits" />
+                <img src="img/crousel2.png" class="d-block w-100" alt="Cow shed" />
+            </div>
+            <div class="carousel-item">
+                <img src="img/crousel1.png" class="d-block w-100" alt="Cow and indian farmers" />
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-mdb-target="#carouselExampleCrossfade"
@@ -184,10 +188,63 @@
     </div>
     <!-- Why Jeevan Dairy? -->
 
+    <!-- Divider -->
+    <hr class="hr hr-blurry" />
+    <!-- Divider -->
 
+    <!-- card -->
+    <h1 class="text-blue text-center letter-spacing text-uppercase fw-bold font1">Our Process</h1>
+    <div class="card-group">
+        <div class="card">
+            <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/041.webp" class="card-img-top"
+                alt="Hollywood Sign on The Hill" />
+            <div class="card-body">
+                <h5 class="card-title">1. Milk Collection from Local Farms</h5>
+                <p class="card-text">
+                    We source our milk directly from local farms, ensuring the freshness and quality that define Jeevan
+                    Dairy.
+                </p>
+            </div>
+            <div class="card-footer">
+                <small class="text-muted">Your Trusted Source for Quality Milk Jeevan Dairy</small>
+            </div>
+        </div>
+        <div class="card">
+            <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/042.webp" class="card-img-top"
+                alt="Palm Springs Road" />
+            <div class="card-body">
+                <h5 class="card-title">2. Fair Compensation for Farmers</h5>
+                <p class="card-text">Our commitment to fair trade means that farmers receive the best rates for their
+                    milk, fostering a sustainable and mutually beneficial partnership.</p>
+            </div>
+            <div class="card-footer">
+                <small class="text-muted">Your Trusted Source for Quality Milk Jeevan Dairy</small>
+            </div>
+        </div>
+        <div class="card">
+            <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/043.webp" class="card-img-top"
+                alt="Los Angeles Skyscrapers" />
+            <div class="card-body">
+                <h5 class="card-title">3. Quality Control</h5>
+                <p class="card-text">
+                    Rigorous quality checks at every stage of the process ensure that only the finest milk reaches your
+                    home.
+                </p>
+            </div>
+            <div class="card-footer">
+                <small class="text-muted">Your Trusted Source for Quality Milk Jeevan Dairy</small>
+            </div>
+        </div>
+    </div>
+    <!-- card -->
+    <!-- Divider -->
+    <hr class="hr hr-blurry" />
+    <!-- Divider -->
 
-
-
+    <h1 class="text-blue text-center letter-spacing text-uppercase fw-bold font1">By choosing Jeevan Dairy, you're not
+        just choosing a brand; you're choosing a commitment to quality, sustainability, and the prosperity of our local
+        farming communities. Join us on this journey towards a healthier, happier, and more connected community through
+        the goodness of pure, farm-fresh milk.</h1>
     <!-- MDB -->
     <script type="text/javascript"
         src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.0.0/mdb.umd.min.js"></script>
