--- a/index.html
+++ b/index.html
@@ -5,12 +5,18 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <!-- Font Awesome -->
+    <meta name="description"
+        content="Discover the excellence of Jeevan Dairy in Jhansi (284202). Our business model revolves around collecting quality milk directly from farmers, ensuring the best rates for our agricultural partners. Explore our range of premium dairy products today.">
+    <meta name="keywords"
+        content="Jeevan Dairy, Dairy Products, Quality Milk from Uttar Pradesh Farmers, Dairy Farming in Uttar Pradesh, dairy farm near me, Farmer-Centric Dairy Mode, Milk Collection from Farmers, Agribusiness, Sustainable Farming, Dairy Industry, Milk Collection Point in Uttar Pradesh, Dairy Farm near Jhansi Fort, Jeevan Dairy Uttar Pradesh, Best Rates for Farmers in Uttar Pradesh, Local Dairy in Uttar Pradesh, Fresh Cow Milk Uttar Pradesh, ">
+    <meta name="author" content="Jeevan Dairy">
     <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
     <!-- Google Fonts -->
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
     <!-- MDB -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.0.0/mdb.min.css" rel="stylesheet" />
-    <title>Document</title>
+    <link rel="stylesheet" href="style.css">
+    <title>Jeevan-Dairy</title>
 
 </head>
 
