--- a/index.html
+++ b/index.html
@@ -201,7 +201,7 @@
         <h1 class="text-blue text-center letter-spacing text-uppercase my-5 fw-bold font1">Our Process</h1>
         <div class="card-group">
             <div class="card">
-                <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/041.webp" class="card-img-top"
+                <img src="img/collecting.png" class="card-img-top"
                     alt="Hollywood Sign on The Hill" />
                 <div class="card-body">
                     <h5 class="card-title">1. Milk Collection from Local Farms</h5>
@@ -216,7 +216,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/042.webp" class="card-img-top"
+                <img src="img/money.png" class="card-img-top"
                     alt="Palm Springs Road" />
                 <div class="card-body">
                     <h5 class="card-title">2. Fair Compensation for Farmers</h5>
@@ -229,7 +229,7 @@
                 </div>
             </div>
             <div class="card">
-                <img src="https://mdbcdn.b-cdn.net/img/new/standard/city/043.webp" class="card-img-top"
+                <img src="img/quality.png" class="card-img-top"
                     alt="Los Angeles Skyscrapers" />
                 <div class="card-body">
                     <h5 class="card-title">3. Quality Control</h5>
