--- a/index.html
+++ b/index.html
@@ -216,7 +216,7 @@
         <!-- Why Jeevan Dairy? -->
 
         <!-- Divider -->
-        <hr class="hr hr-blurry mt-4" />
+        <!-- <hr class="hr hr-blurry mt-4" /> -->
         <!-- Divider -->
 
         <!-- card -->
@@ -271,8 +271,9 @@
         <!-- Divider -->
         <hr class="hr hr-blurry" />
         <!-- Divider -->
-        <section>
-            <h1 class="text-blue text-center letter-spacing text-uppercase fw-bold font1 my-5 bg-blue text-white p-2">By
+        <section class="container-fluid ">
+            <h3 class="text-blue text-center letter-spacing text-uppercase fw-bold font1 my-5 py-5  bg-blue text-white p-2 ">
+                By
                 choosing Jeevan Dairy, you're
                 not
                 just choosing a brand; you're choosing a commitment to quality, sustainability, and the prosperity of
@@ -280,7 +281,7 @@
                 local
                 farming communities. Join us on this journey towards a healthier, happier, and more connected community
                 through
-                the goodness of pure, farm-fresh milk.</h1>
+                the goodness of pure, farm-fresh milk.</h3>
         </section>
 
 
@@ -332,8 +333,7 @@
                             </div>
                         </div>
                     </div>
-                </div>
-                
+                </div>       
         </section>
         <!-- MDB -->
         <script type="text/javascript"
