rags done for the day

--- a/about.html
+++ b/about.html
@@ -42,7 +42,7 @@
                         <a class="nav-link text-white fw-bold" href="#">Services</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link text-white fw-bold" href="#">business opportunities</a>
+                        <a class="nav-link text-white fw-bold" href="#">Business Opportunities</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link text-white fw-bold" href="#">Contact us</a>
@@ -80,17 +80,20 @@
                                 <span class="text-darkblue font3"> Your Trusted Source for Quality Milk! </span>
                             </h2>
 
-
+                            <p>
+                                At <B>Jeevan-Dairy</B> , we take pride in our commitment to delivering the <I>freshest
+                                    and highest</I> quality milk straight from the heart of <U>Uttar Pradesh</U>. Our
+                                business model revolves around nurturing a symbiotic relationship with local farmers,
+                                ensuring they receive the best rates for their invaluable contributions to our
+                                community.
+                            </p>
 
                             <p>
-                                At Jeevan Dairy, we take pride in our commitment to delivering the freshest and
-                                highest
-                                quality milk straight from the heart of Uttar Pradesh. Our business model revolves
-                                around
-                                nurturing a symbiotic relationship with local farmers, ensuring they receive the
-                                best
-                                rates
-                                for their invaluable contributions to our community.
+                                The heart of our business is a unique and sustainable model that sets us apart. We
+                                believe in the strength of our local farming communities and their ability to produce
+                                exceptional quality milk. <b>Jeevan-Dairy</b> acts as a bridge between these dedicated
+                                farmers and the big dairy giants, creating a seamless supply chain that benefits
+                                everyone involved.
                             </p>
 
                             <!-- <a type="button" class="btn text-white bg-blue" data-mdb-ripple-init href="/about.html"
@@ -104,7 +107,7 @@
         </div>
     </section>
     <!--END About content  -->
-    
+
     <!-- Divider -->
     <br>
     <hr class="hr hr-blurry" />
