--- a/index.html
+++ b/index.html
@@ -282,15 +282,9 @@
     <section class="container-fluid ">
         <h3
             class="text-blue text-center letter-spacing text-uppercase fw-bold font1 my-5 py-5  bg-blue text-white p-2 ">
-            By
-            choosing Jeevan Dairy, you're
-            not
-            just choosing a brand; you're choosing a commitment to quality, sustainability, and the prosperity of
-            our
-            local
-            farming communities. Join us on this journey towards a healthier, happier, and more connected community
-            through
-            the goodness of pure, farm-fresh milk.</h3>
+            By choosing Jeevan Dairy, you're not just choosing a brand; you're choosing a commitment to quality,
+            sustainability, and the prosperity of our localfarming communities. Join us on this journey towards a
+            healthier, happier, and more connected community through the goodness of pure, farm-fresh milk.</h3>
     </section>
 
 
@@ -366,116 +360,119 @@
     <!-- Divider -->
     <hr class="hr hr-blurry" />
     <!-- Divider -->
+
     <!-- Footer -->
-    <footer class="text-center text-lg-start bg-blue text-muted text-white">
-        <!-- Section: Social media -->
-        <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom text-white">
-            <!-- Left -->
-            <div class="me-5 d-none d-lg-block ">
-                <span>Get connected with us on social networks:</span>
-            </div>
-            <!-- Left -->
-
-            <!-- Right -->
-            <div>
-                <a href="" class="me-4 text-reset">
-                    <i class="fab fa-facebook-f"></i>
-                </a>
-                <a href="" class="me-4 text-reset">
-                    <i class="fab fa-google"></i>
-                </a>
-                <a href="" class="me-4 text-reset">
-                    <i class="fab fa-instagram"></i>
-                </a>
-            </div>
-            <!-- Right -->
-        </section>
-        <!-- Section: Social media -->
-
-        <!-- Section: Links  -->
-        <section class="text-white">
-            <div class="container text-center text-md-start mt-5">
-                <!-- Grid row -->
-                <div class="row mt-3">
-                    <!-- Logo column -->
-                    <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
-                      <img src="" alt="">
-                    </div>
-                    <!-- logo column -->
-
-                    <!-- Grid column -->
-                    <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
-                        <!-- Links -->
-                        <h6 class="text-uppercase fw-bold mb-4">
-                            Business Opportunities
-                        </h6>
-                        <p>
-                            <a href="#!" class="text-reset">Angular</a>
-                        </p>
-                        <p>
-                            <a href="#!" class="text-reset">React</a>
-                        </p>
-                        <p>
-                            <a href="#!" class="text-reset">Vue</a>
-                        </p>
-                        <p>
-                            <a href="#!" class="text-reset">Laravel</a>
-                        </p>
-                    </div>
-                    <!-- Grid column -->
-
-                    <!-- Grid column -->
-                    <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
-                        <!-- Links -->
-                        <h6 class="text-uppercase fw-bold mb-4">
-                            Useful links
-                        </h6>
-                        <p>
-                            <a href="about.html" class="text-reset">About</a>
-                        </p>
-                        <p>
-                            <a href="https://api.whatsapp.com/send?phone=917566640419&text=Got%20your%20reference%20from%20your%20Website%20.%20I%20want%20to%20be part of%20your%20Dairy%20Business%20services"
-                                target=”_blank” class="text-reset">Join us</a>
-                        </p>
-                        <p>
-                            <a href="https://api.whatsapp.com/send?phone=917566640419&text=Got%20your%20reference%20from%20your%20website%20.%20I%20want%20to%20know%20more%20about%20your%20services"
-                                target=”_blank” class="text-reset">Services</a>
-                        </p>
-                        <p>
-                            <a href="https://api.whatsapp.com/send?phone=917566640419&text=%20Hello sir,%20I%20Need%20your%20Help%20in%20Dairy%20Business%20"
-                                target=”_blank” class="text-reset">Help</a>
-                        </p>
-                    </div>
-                    <!-- Grid column -->
-
-                    <!-- Grid column -->
-                    <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
-                        <!-- Links -->
-                        <h6 class="text-uppercase fw-bold mb-4">Contact</h6>
-                        <p><i class="fas fa-home me-3"></i>
-                            Near Railway Crossing Pal Colony Gwalior road
-                            Garautha oad Birare Gurasarai Jhansi - 284202</p>
-                        <p>
-                            <i class="fas fa-envelope me-3"></i>
-                            Jeevandairy@gmail.com
-                        </p>
-                        <p><i class="fas fa-phone me-3"></i> + 91 787 921 7201</p>
-                        <p><i class="fas fa-message me-3"></i> + 91 756 664 0419</p>
-                    </div>
-                    <!-- Grid column -->
+    <section>
+        <footer class="text-center text-lg-start bg-blue text-muted text-white">
+            <!-- Section: Social media -->
+            <section class="d-flex justify-content-center justify-content-lg-between p-4 border-bottom text-white">
+                <!-- Left -->
+                <div class="me-5 d-none d-lg-block ">
+                    <span>Get connected with us on social networks:</span>
                 </div>
-                <!-- Grid row -->
-            </div>
-        </section>
-        <!-- Section: Links  -->
+                <!-- Left -->
 
-        <!-- Copyright -->
-        <div class="text-center text-white p-4" style="background-color: rgba(1, 9, 14, 0.233);">
-            © 2021 Copyright:
-            <a class="text-reset fw-bold" href="">Jeevan-Dairy</a>
-        </div>
-        <!-- Copyright -->
-    </footer>
+                <!-- Right -->
+                <div>
+                    <a href="" class="me-4 text-reset">
+                        <i class="fab fa-facebook-f"></i>
+                    </a>
+                    <a href="" class="me-4 text-reset">
+                        <i class="fab fa-google"></i>
+                    </a>
+                    <a href="" class="me-4 text-reset">
+                        <i class="fab fa-instagram"></i>
+                    </a>
+                </div>
+                <!-- Right -->
+            </section>
+            <!-- Section: Social media -->
+
+            <!-- Section: Links  -->
+            <section class="text-white">
+                <div class="container text-center text-md-start mt-5">
+                    <!-- Grid row -->
+                    <div class="row mt-3">
+                        <!-- Logo column -->
+                        <div class="col-md-3 col-lg-4 col-xl-3 mx-auto mb-4">
+                            <img src="" alt="">
+                        </div>
+                        <!-- logo column -->
+
+                        <!-- Grid column -->
+                        <div class="col-md-2 col-lg-2 col-xl-2 mx-auto mb-4">
+                            <!-- Links -->
+                            <h6 class="text-uppercase fw-bold mb-4">
+                                Business Opportunities
+                            </h6>
+                            <p>
+                                <a href="#!" class="text-reset">• 1 </a>
+                            </p>
+                            <p>
+                                <a href="#!" class="text-reset">• 2</a>
+                            </p>
+                            <p>
+                                <a href="#!" class="text-reset">• 3</a>
+                            </p>
+                            <p>
+                                <a href="#!" class="text-reset">• 4</a>
+                            </p>
+                        </div>
+                        <!-- Grid column -->
+
+                        <!-- Grid column -->
+                        <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
+                            <!-- Links -->
+                            <h6 class="text-uppercase fw-bold mb-4">
+                                Useful links
+                            </h6>
+                            <p>
+                                <a href="about.html" class="text-reset">About</a>
+                            </p>
+                            <p>
+                                <a href="https://api.whatsapp.com/send?phone=917566640419&text=Got%20your%20reference%20from%20your%20Website%20.%20I%20want%20to%20be part of%20your%20Dairy%20Business%20services"
+                                    target=”_blank” class="text-reset">Join us</a>
+                            </p>
+                            <p>
+                                <a href="https://api.whatsapp.com/send?phone=917566640419&text=Got%20your%20reference%20from%20your%20website%20.%20I%20want%20to%20know%20more%20about%20your%20services"
+                                    target=”_blank” class="text-reset">Services</a>
+                            </p>
+                            <p>
+                                <a href="https://api.whatsapp.com/send?phone=917566640419&text=%20Hello sir,%20I%20Need%20your%20Help%20in%20Dairy%20Business%20"
+                                    target=”_blank” class="text-reset">Help</a>
+                            </p>
+                        </div>
+                        <!-- Grid column -->
+
+                        <!-- Grid column -->
+                        <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
+                            <!-- Links -->
+                            <h6 class="text-uppercase fw-bold mb-4">Contact</h6>
+                            <p><i class="fas fa-home me-3"></i>
+                                Near Railway Crossing Pal Colony Gwalior road
+                                Garautha oad Birare Gurasarai Jhansi - 284202</p>
+                            <p>
+                                <i class="fas fa-envelope me-3"></i>
+                                Jeevandairy@gmail.com
+                            </p>
+                            <p><i class="fas fa-phone me-3"></i> + 91 787 921 7201</p>
+                            <p><i class="fas fa-message me-3"></i> + 91 756 664 0419</p>
+                        </div>
+                        <!-- Grid column -->
+                    </div>
+                    <!-- Grid row -->
+                </div>
+            </section>
+            <!-- Section: Links  -->
+
+            <!-- Copyright -->
+            <div class="text-center text-white p-4" style="background-color: rgba(1, 9, 14, 0.233);">
+                © 2021 Copyright:
+                <a class="text-reset fw-bold" href="">Jeevan-Dairy</a>
+            </div>
+            <!-- Copyright -->
+        </footer>
+    </section>
     <!-- Footer -->
 
     <!-- MDB -->
