--- a/index.html
+++ b/index.html
@@ -424,11 +424,8 @@
                         <div class="col-md-3 col-lg-2 col-xl-2 mx-auto mb-4">
                             <!-- Links -->
                             <h6 class="text-uppercase fw-bold mb-4">
-                                Useful links
+                                Links
                             </h6>
-                            <p>
-                                <a href="about.html" class="text-reset">About</a>
-                            </p>
                             <p>
                                 <a href="https://api.whatsapp.com/send?phone=917566640419&text=Got%20your%20reference%20from%20your%20Website%20.%20I%20want%20to%20be part of%20your%20Dairy%20Business%20services"
                                     target=”_blank” class="text-reset">Join us</a>
@@ -447,7 +444,7 @@
                         <!-- Grid column -->
                         <div class="col-md-4 col-lg-3 col-xl-3 mx-auto mb-md-0 mb-4">
                             <!-- Links -->
-                            <h6 class="text-uppercase fw-bold mb-4">Contact</h6>
+                            <h6 class="text-uppercase fw-bold mb-4">Contact info</h6>
                             <p><i class="fas fa-home me-3"></i>
                                 Near Railway Crossing Pal Colony Gwalior road
                                 Garautha oad Birare Gurasarai Jhansi - 284202</p>
