add scroll animation

--- a/index.html
+++ b/index.html
@@ -4,19 +4,25 @@
     <head>
         <meta charset="UTF-8">
         <meta name="viewport" content="width=device-width, initial-scale=1.0">
-        <!-- Font Awesome -->
         <meta name="description"
             content="Discover the excellence of Jeevan Dairy in Jhansi (284202). Our business model revolves around collecting quality milk directly from farmers, ensuring the best rates for our agricultural partners. Explore our range of premium dairy products today.">
         <meta name="keywords"
             content="Jeevan Dairy, Dairy Products, Quality Milk from Uttar Pradesh Farmers, Dairy Farming in Uttar Pradesh, dairy farm near me, Farmer-Centric Dairy Mode, Milk Collection from Farmers, Agribusiness, Sustainable Farming, Dairy Industry, Milk Collection Point in Uttar Pradesh, Dairy Farm near Jhansi Fort, Jeevan Dairy Uttar Pradesh, Best Rates for Farmers in Uttar Pradesh, Local Dairy in Uttar Pradesh, Fresh Cow Milk Uttar Pradesh, ">
         <meta name="author" content="Jeevan Dairy">
+        <!-- Font Awesome -->
         <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
         <!-- Google Fonts -->
         <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
         <!-- MDB -->
         <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.0.0/mdb.min.css" rel="stylesheet" />
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" />
+        <!-- Animation on headings -->
+        <!-- <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/4.1.1/animate.min.css" /> -->
+        <!-- Animation on scrolling -->
+        <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+
+        <!-- Css file -->
         <link rel="stylesheet" href="style.css">
+
         <title>Jeevan-Dairy</title>
 
     </head>
@@ -104,10 +110,11 @@
                 <div class="container pt-5">
                     <div class="row align-items-center">
                         <div class="col-lg-5">
-                            <img class="img-fluid mb-4 mb-lg-0 " src="img/about.jpg" alt="Cow" />
+                            <img class="img-fluid mb-4 mb-lg-0 " src="img/about.jpg" alt="Cow"
+                                data-aos="fade-down-right" />
                         </div>
                         <div class="col-lg-7">
-                            <div class="px-md-5">
+                            <div class="px-md-5" data-aos="fade-down-left">
                                 <h1 class="text-uppercase text-blue fw-bold mb-3 letter-spacing font1">
                                     About Us
                                 </h1>
@@ -160,8 +167,9 @@
                 </h1>
                 <div class="px-3 mt-4 mt-md-0">
                     <div class="row my-md-5">
-                        <div
-                            class="col-md-7  col-sm-12 col-12 d-flex flex-column justify-content-center align-items-center px-sm-5 px-3 text-white">
+                        <div class="col-md-7  col-sm-12 col-12 d-flex flex-column justify-content-center align-items-center px-sm-5 px-3 text-white"
+                            data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine">
+
                             <h3 class=" text-uppercase fw-bold font3">• Quality Assurance </h3>
                             <p class="my-md-3 text-capitalize">We believe in quality over quantity. Our stringent
                                 quality
@@ -172,12 +180,14 @@
                         <div class="col-md-5  col-sm-12 col-12 d-flex justify-content-center my-md-0 my-3">
                             <img class="img-fluid mb-4 mb-lg-0 " src="img/quality testing.png" alt="We believe in quality over quantity. Our stringent quality
                     control measures guarantee that every drop of milk that reaches your doorstep is pure, fresh,
-                    and free from any artificial additives." />
+                    and free from any artificial additives." data-aos="fade-left" data-aos-offset="500"
+                                data-aos-duration="500" />
                         </div>
                     </div>
                     <div class="row my-md-5 ">
-                        <div
-                            class="col-md-7  col-sm-12 col-12 d-flex flex-column justify-content-center align-items-center px-sm-5 px-3 order-md-2 text-white">
+                        <div class="col-md-7  col-sm-12 col-12 d-flex flex-column justify-content-center align-items-center px-sm-5 px-3 order-md-2 text-white"
+                            data-aos="fade-left" data-aos-anchor="#example-anchor" data-aos-offset="500"
+                            data-aos-duration="500">
                             <h3 class="text-uppercase fw-bold font3">• Farmers First</h3>
                             <p class="my-md-3 text-capitalize">Our unique business model focuses on empowering local
                                 farmers. We
@@ -189,12 +199,13 @@
                         <div class="col-md-5  col-sm-12 col-12 d-flex justify-content-center my-md-0 my-3 order-md-1">
                             <img class="img-fluid mb-4 mb-lg-0" src="img/farmer frist.png" alt="Our unique business model focuses on empowering local farmers. We
                     work closely with them, providing fair and competitive rates for their produce. By choosing
-                    Jeevan Dairy, you are supporting sustainable farming practices and local livelihoods." />
+                    Jeevan Dairy, you are supporting sustainable farming practices and local livelihoods."
+                                data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine" />
                         </div>
                     </div>
                     <div class="row my-md-5">
-                        <div
-                            class="col-md-7  col-sm-12 col-12 d-flex flex-column justify-content-center align-items-center px-sm-5 px-3 text-white ">
+                        <div class="col-md-7  col-sm-12 col-12 d-flex flex-column justify-content-center align-items-center px-sm-5 px-3 text-white "
+                            data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine">
                             <h3 class=" text-uppercase fw-bold font3">• Community-Centric Approach</h3>
                             <p class="my-md-3 text-capitalize">Jeevan Dairy is more than just a dairy brand; we are an
                                 integral
@@ -209,7 +220,7 @@
                             <img class="img-fluid mb-4 mb-lg-0 " src="img/group faremr support.png" alt="Jeevan Dairy is more than just a dairy brand; we are an integral
                     part of the communities we serve. Our commitment to community welfare extends beyond providing
                     quality milk — we actively engage in initiatives that uplift and support the people who make our
-                    dairy products possible." />
+                    dairy products possible." data-aos="fade-left" data-aos-offset="500" data-aos-duration="500" />
                         </div>
                     </div>
                 </div>
@@ -230,7 +241,7 @@
                 class="text-blue text-center letter-spacing text-uppercase my-5 fw-bold font1 animate__animated animate__flip animate__infinite infinite animate__slower	4s">
                 Our Process</h1>
             <div class="card-group">
-                <div class="card">
+                <div class="card"  data-aos="fade-right">
                     <img src="img/collecting.png" class="card-img-top" alt="milk Collection" />
                     <div class="card-body">
                         <h5 class="card-title">1. Milk Collection from Local Farms</h5>
@@ -244,7 +255,7 @@
                         <small class="text-muted">Your Trusted Source for Quality Milk Jeevan Dairy</small>
                     </div>
                 </div>
-                <div class="card">
+                <div class="card"  data-aos="fade-down">
                     <img src="img/money.png" class="card-img-top" alt="well paid farmers" />
                     <div class="card-body">
                         <h5 class="card-title">2. Fair Compensation for Farmers</h5>
@@ -256,7 +267,7 @@
                         <small class="text-muted">Your Trusted Source for Quality Milk Jeevan Dairy</small>
                     </div>
                 </div>
-                <div class="card">
+                <div class="card"  data-aos="fade-left">
                     <img src="img/quality.png" class="card-img-top" alt="Milk quality test" />
                     <div class="card-body">
                         <h5 class="card-title">3. Quality Control</h5>
@@ -301,7 +312,7 @@
                 </div> -->
                 <div class="row">
                     <div class="col-sm-12 col-md-4 col-lg-4 col-12 py-3">
-                        <div class="card text-center box border border-light shadow-0">
+                        <div class="card text-center box border border-light shadow-0" data-aos="zoom-in">
                             <div class="card-body">
                                 <img src="img/handshake.png" alt="handshake" class="img-fluid icon my-3">
                                 <h4 class="card-title text-blue">Our Mission</h4>
@@ -317,8 +328,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-12 col-md-4 col-lg-4 col-12 py-3">
-                        <div class="card text-center box border border-light shadow-0">
+                    <div class="col-sm-12 col-md-4 col-lg-4 col-12 py-3" >
+                        <div class="card text-center box border border-light shadow-0" data-aos="zoom-in">
                             <div class="card-body">
                                 <img src="img/company-vision.png" alt="Values" class="img-fluid icon my-3">
                                 <h4 class="card-title text-blue">Our Vision</h4>
@@ -336,7 +347,7 @@
                         </div>
                     </div>
                     <div class="col-sm-12 col-md-4 col-lg-4 col-12 py-3">
-                        <div class="card text-center box border border-light shadow-0">
+                        <div class="card text-center box border border-light shadow-0" data-aos="zoom-in">
                             <div class="card-body">
                                 <img src="img/leadership.png" alt="leadership" class="img-fluid icon my-3">
                                 <h4 class="card-title text-blue">Our Values</h4>
@@ -374,15 +385,33 @@
 
                     <!-- Right -->
                     <div>
-                        <a href="" class="me-4 text-reset">
+                        <!-- Facebook -->
+                        <a data-mdb-ripple-init class="btn text-white btn-floating me-2 icons"
+                            style="background-color: #3b5998;" href="#!" role="button"><i
+                                class="fab fa-facebook-f"></i></a>
+
+                        <!-- Google -->
+                        <a data-mdb-ripple-init class="btn text-white btn-floating me-2 icons"
+                            style="background-color: #dd4b39;" href="#!" role="button"><i class="fab fa-google"></i></a>
+
+                        <!-- Instagram -->
+                        <a data-mdb-ripple-init class="btn text-white btn-floating me-2 icons"
+                            style="background-color: #ac2bac;" href="#!" role="button"><i
+                                class="fab fa-instagram"></i></a>
+                        <!-- Whatsapp -->
+                        <a data-mdb-ripple-init class="btn text-white btn-floating me-2 icons"
+                            style="background-color: #28D146;" href="#!" role="button"><i
+                                class="fab fa-whatsapp"></i></a>
+
+                        <!-- <a href="" class="me-4 text-reset">
                             <i class="fab fa-facebook-f"></i>
-                        </a>
-                        <a href="" class="me-4 text-reset">
+                        </a> -->
+                        <!-- <a href="" class="me-4 text-reset">
                             <i class="fab fa-google"></i>
                         </a>
                         <a href="" class="me-4 text-reset">
                             <i class="fab fa-instagram"></i>
-                        </a>
+                        </a> -->
                     </div>
                     <!-- Right -->
                 </section>
@@ -472,6 +501,11 @@
         </section>
         <!-- Footer -->
 
+        <!-- Animation on scrolling -->
+        <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+        <script>
+            AOS.init();
+        </script>
         <!-- MDB -->
         <script type="text/javascript"
             src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.0.0/mdb.umd.min.js"></script>
