--- a/about.html
+++ b/about.html
@@ -15,6 +15,12 @@
     <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
     <!-- MDB -->
     <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.0.0/mdb.min.css" rel="stylesheet" />
+    <!-- Animation on scrolling -->
+    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
+    
+    <!-- Css file -->
+    <link rel="stylesheet" href="style.css">
+
     <link rel="stylesheet" href="style.css">
     <title>About</title>
 
@@ -69,7 +75,9 @@
             <div class="container pt-5">
                 <div class="row align-items-center">
                     <div class="col-lg-5">
-                        <img class="img-fluid mb-4 mb-lg-0" src="img/LOGO.png" alt="" />
+                        <img class="img-fluid mb-4 mb-lg-0" src="img/LOGO.png" alt="" data-aos="flip-left"
+     data-aos-easing="ease-out-cubic"
+     data-aos-duration="2000"/>
                     </div>
                     <div class="col-lg-7">
                         <div class="px-md-5">
@@ -113,6 +121,15 @@
     <hr class="hr hr-blurry" />
     <br>
     <!-- Divider -->
+
+    <!-- Animation on scrolling -->
+    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+    <script>
+        AOS.init();
+    </script>
+
+    <!-- MDB -->
+    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.0.0/mdb.umd.min.js"></script>
 </body>
 
 </html>
