--- a/index.html
+++ b/index.html
@@ -110,11 +110,11 @@
                 <div class="container pt-5">
                     <div class="row align-items-center">
                         <div class="col-lg-5">
-                            <img class="img-fluid mb-4 mb-lg-0 " src="img/about.jpg" alt="Cow"
-                                data-aos="fade-down-right" />
+                            <img class="img-fluid mb-4 mb-lg-0 " src="img/about.jpg" alt="Cow" data-aos="flip-left"
+                                data-aos-easing="ease-out-cubic" data-aos-duration="2000" />
                         </div>
                         <div class="col-lg-7">
-                            <div class="px-md-5" data-aos="fade-down-left">
+                            <div class="px-md-5">
                                 <h1 class="text-uppercase text-blue fw-bold mb-3 letter-spacing font1">
                                     About Us
                                 </h1>
@@ -167,8 +167,8 @@
                 </h1>
                 <div class="px-3 mt-4 mt-md-0">
                     <div class="row my-md-5">
-                        <div class="col-md-7  col-sm-12 col-12 d-flex flex-column justify-content-center align-items-center px-sm-5 px-3 text-white"
-                            data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine">
+                        <div
+                            class="col-md-7  col-sm-12 col-12 d-flex flex-column justify-content-center align-items-center px-sm-5 px-3 text-white">
 
                             <h3 class=" text-uppercase fw-bold font3">• Quality Assurance </h3>
                             <p class="my-md-3 text-capitalize">We believe in quality over quantity. Our stringent
@@ -180,14 +180,13 @@
                         <div class="col-md-5  col-sm-12 col-12 d-flex justify-content-center my-md-0 my-3">
                             <img class="img-fluid mb-4 mb-lg-0 " src="img/quality testing.png" alt="We believe in quality over quantity. Our stringent quality
                     control measures guarantee that every drop of milk that reaches your doorstep is pure, fresh,
-                    and free from any artificial additives." data-aos="fade-left" data-aos-offset="500"
-                                data-aos-duration="500" />
+                    and free from any artificial additives." data-aos="flip-left" data-aos-easing="ease-out-cubic"
+                                data-aos-duration="2000" />
                         </div>
                     </div>
                     <div class="row my-md-5 ">
-                        <div class="col-md-7  col-sm-12 col-12 d-flex flex-column justify-content-center align-items-center px-sm-5 px-3 order-md-2 text-white"
-                            data-aos="fade-left" data-aos-anchor="#example-anchor" data-aos-offset="500"
-                            data-aos-duration="500">
+                        <div
+                            class="col-md-7  col-sm-12 col-12 d-flex flex-column justify-content-center align-items-center px-sm-5 px-3 order-md-2 text-white">
                             <h3 class="text-uppercase fw-bold font3">• Farmers First</h3>
                             <p class="my-md-3 text-capitalize">Our unique business model focuses on empowering local
                                 farmers. We
@@ -200,12 +199,12 @@
                             <img class="img-fluid mb-4 mb-lg-0" src="img/farmer frist.png" alt="Our unique business model focuses on empowering local farmers. We
                     work closely with them, providing fair and competitive rates for their produce. By choosing
                     Jeevan Dairy, you are supporting sustainable farming practices and local livelihoods."
-                                data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine" />
+                                data-aos="flip-left" data-aos-easing="ease-out-cubic" data-aos-duration="2000" />
                         </div>
                     </div>
                     <div class="row my-md-5">
-                        <div class="col-md-7  col-sm-12 col-12 d-flex flex-column justify-content-center align-items-center px-sm-5 px-3 text-white "
-                            data-aos="fade-right" data-aos-offset="300" data-aos-easing="ease-in-sine">
+                        <div
+                            class="col-md-7  col-sm-12 col-12 d-flex flex-column justify-content-center align-items-center px-sm-5 px-3 text-white ">
                             <h3 class=" text-uppercase fw-bold font3">• Community-Centric Approach</h3>
                             <p class="my-md-3 text-capitalize">Jeevan Dairy is more than just a dairy brand; we are an
                                 integral
@@ -220,7 +219,8 @@
                             <img class="img-fluid mb-4 mb-lg-0 " src="img/group faremr support.png" alt="Jeevan Dairy is more than just a dairy brand; we are an integral
                     part of the communities we serve. Our commitment to community welfare extends beyond providing
                     quality milk — we actively engage in initiatives that uplift and support the people who make our
-                    dairy products possible." data-aos="fade-left" data-aos-offset="500" data-aos-duration="500" />
+                    dairy products possible." data-aos="flip-left" data-aos-easing="ease-out-cubic"
+                                data-aos-duration="2000" />
                         </div>
                     </div>
                 </div>
@@ -241,7 +241,7 @@
                 class="text-blue text-center letter-spacing text-uppercase my-5 fw-bold font1 animate__animated animate__flip animate__infinite infinite animate__slower	4s">
                 Our Process</h1>
             <div class="card-group">
-                <div class="card"  data-aos="fade-right">
+                <div class="card">
                     <img src="img/collecting.png" class="card-img-top" alt="milk Collection" />
                     <div class="card-body">
                         <h5 class="card-title">1. Milk Collection from Local Farms</h5>
@@ -255,7 +255,7 @@
                         <small class="text-muted">Your Trusted Source for Quality Milk Jeevan Dairy</small>
                     </div>
                 </div>
-                <div class="card"  data-aos="fade-down">
+                <div class="card">
                     <img src="img/money.png" class="card-img-top" alt="well paid farmers" />
                     <div class="card-body">
                         <h5 class="card-title">2. Fair Compensation for Farmers</h5>
@@ -267,7 +267,7 @@
                         <small class="text-muted">Your Trusted Source for Quality Milk Jeevan Dairy</small>
                     </div>
                 </div>
-                <div class="card"  data-aos="fade-left">
+                <div class="card">
                     <img src="img/quality.png" class="card-img-top" alt="Milk quality test" />
                     <div class="card-body">
                         <h5 class="card-title">3. Quality Control</h5>
@@ -312,7 +312,7 @@
                 </div> -->
                 <div class="row">
                     <div class="col-sm-12 col-md-4 col-lg-4 col-12 py-3">
-                        <div class="card text-center box border border-light shadow-0" data-aos="zoom-in">
+                        <div class="card text-center box border border-light shadow-0">
                             <div class="card-body">
                                 <img src="img/handshake.png" alt="handshake" class="img-fluid icon my-3">
                                 <h4 class="card-title text-blue">Our Mission</h4>
@@ -328,8 +328,8 @@
                             </div>
                         </div>
                     </div>
-                    <div class="col-sm-12 col-md-4 col-lg-4 col-12 py-3" >
-                        <div class="card text-center box border border-light shadow-0" data-aos="zoom-in">
+                    <div class="col-sm-12 col-md-4 col-lg-4 col-12 py-3">
+                        <div class="card text-center box border border-light shadow-0">
                             <div class="card-body">
                                 <img src="img/company-vision.png" alt="Values" class="img-fluid icon my-3">
                                 <h4 class="card-title text-blue">Our Vision</h4>
@@ -347,7 +347,7 @@
                         </div>
                     </div>
                     <div class="col-sm-12 col-md-4 col-lg-4 col-12 py-3">
-                        <div class="card text-center box border border-light shadow-0" data-aos="zoom-in">
+                        <div class="card text-center box border border-light shadow-0">
                             <div class="card-body">
                                 <img src="img/leadership.png" alt="leadership" class="img-fluid icon my-3">
                                 <h4 class="card-title text-blue">Our Values</h4>
