--- a/about.html
+++ b/about.html
@@ -1,135 +1,140 @@
 <!DOCTYPE html>
 <html lang="en">
 
-<head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <!-- Font Awesome -->
-    <meta name="description"
-        content="Discover the excellence of Jeevan Dairy in Jhansi (284202). Our business model revolves around collecting quality milk directly from farmers, ensuring the best rates for our agricultural partners. Explore our range of premium dairy products today.">
-    <meta name="keywords"
-        content="Jeevan Dairy, Dairy Products, Quality Milk from Uttar Pradesh Farmers, Dairy Farming in Uttar Pradesh, dairy farm near me, Farmer-Centric Dairy Mode, Milk Collection from Farmers, Agribusiness, Sustainable Farming, Dairy Industry, Milk Collection Point in Uttar Pradesh, Dairy Farm near Jhansi Fort, Jeevan Dairy Uttar Pradesh, Best Rates for Farmers in Uttar Pradesh, Local Dairy in Uttar Pradesh, Fresh Cow Milk Uttar Pradesh, ">
-    <meta name="author" content="Jeevan Dairy">
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
-    <!-- Google Fonts -->
-    <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
-    <!-- MDB -->
-    <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.0.0/mdb.min.css" rel="stylesheet" />
-    <!-- Animation on scrolling -->
-    <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
-    
-    <!-- Css file -->
-    <link rel="stylesheet" href="style.css">
+    <head>
+        <meta charset="UTF-8">
+        <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <!-- Font Awesome -->
+        <meta name="description"
+            content="Discover the excellence of Jeevan Dairy in Jhansi (284202). Our business model revolves around collecting quality milk directly from farmers, ensuring the best rates for our agricultural partners. Explore our range of premium dairy products today.">
+        <meta name="keywords"
+            content="Jeevan Dairy, Dairy Products, Quality Milk from Uttar Pradesh Farmers, Dairy Farming in Uttar Pradesh, dairy farm near me, Farmer-Centric Dairy Mode, Milk Collection from Farmers, Agribusiness, Sustainable Farming, Dairy Industry, Milk Collection Point in Uttar Pradesh, Dairy Farm near Jhansi Fort, Jeevan Dairy Uttar Pradesh, Best Rates for Farmers in Uttar Pradesh, Local Dairy in Uttar Pradesh, Fresh Cow Milk Uttar Pradesh, ">
+        <meta name="author" content="Jeevan Dairy">
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.0.0/css/all.min.css" rel="stylesheet" />
+        <!-- Google Fonts -->
+        <link href="https://fonts.googleapis.com/css?family=Roboto:300,400,500,700&display=swap" rel="stylesheet" />
+        <!-- MDB -->
+        <link href="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.0.0/mdb.min.css" rel="stylesheet" />
+        <!-- Animation on scrolling -->
+        <link href="https://unpkg.com/aos@2.3.1/dist/aos.css" rel="stylesheet">
 
-    <link rel="stylesheet" href="style.css">
-    <title>About</title>
+        <!-- Css file -->
+        <link rel="stylesheet" href="style.css">
 
-</head>
+        <link rel="stylesheet" href="style.css">
+        <title>About</title>
 
-<body>
-    <!-- NAV -->
-    <nav data-mdb-navbar-init
-        class="navbar navbar-expand-lg my-md-4 mx-md-3 navbar-dark fixed-top p-md-3 shadow-6-strong">
-        <div class="container-fluid">
-            <a class="navbar-brand text-white fs-4 fw-bolder" href="index.html">Jeevan Dairy</a>
-            <button data-mdb-collapse-init class="navbar-toggler" type="button" data-mdb-target="#navbarNav"
-                aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
-                <i class="fas fa-bars"></i>
-            </button>
-            <div class="collapse  navbar-collapse" id="navbarNav">
-                <ul class="navbar-nav ms-auto fs-5 ">
-                    <li class="nav-item">
-                        <a class="nav-link  text-white fw-bold" aria-current="page" href="index.html">Home</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link active text-white fw-bold" href="about.html">About</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white fw-bold" href="#">Services</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white fw-bold" href="#">Business Opportunities</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link text-white fw-bold" href="#">Contact us</a>
-                    </li>
-                </ul>
+    </head>
+
+    <body>
+        <!-- NAV -->
+        <nav data-mdb-navbar-init
+            class="navbar navbar-expand-lg my-md-4 mx-md-3 navbar-dark fixed-top p-md-3 shadow-6-strong">
+            <div class="container-fluid">
+                <a class="navbar-brand text-white fs-4 fw-bolder" href="index.html">Jeevan Dairy</a>
+                <button data-mdb-collapse-init class="navbar-toggler" type="button" data-mdb-target="#navbarNav"
+                    aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
+                    <i class="fas fa-bars"></i>
+                </button>
+                <div class="collapse  navbar-collapse" id="navbarNav">
+                    <ul class="navbar-nav ms-auto fs-5 ">
+                        <li class="nav-item">
+                            <a class="nav-link  text-white fw-bold" aria-current="page" href="index.html">Home</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link active text-white fw-bold" href="about.html">About</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white fw-bold" href="#">Services</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white fw-bold" href="#">Business Opportunities</a>
+                        </li>
+                        <li class="nav-item">
+                            <a class="nav-link text-white fw-bold" href="#">Contact us</a>
+                        </li>
+                    </ul>
+                </div>
             </div>
-        </div>
-    </nav>
-    <!--END NAV -->
+        </nav>
+        <!--END NAV -->
 
-    <!-- Bg image -->
-    <SECtion>
-        <div class="carousel-inner">
-            <div class="carousel-item active">
-                <img src="img/crousel22.jpg" class="d-block w-100"
-                    alt="Indian cow eating fresh grass at Jeevan Dairy" />
-            </div>
-    </SECtion>
-    <!--END Bg image -->
+        <!-- Bg image -->
+        <SECtion>
+            <div class="carousel-inner">
+                <div class="carousel-item active">
+                    <img src="img/crousel22.jpg" class="d-block w-100"
+                        alt="Indian cow eating fresh grass at Jeevan Dairy" />
+                </div>
+        </SECtion>
+        <!--END Bg image -->
 
-    <!-- About content -->
-    <section>
-        <div class="container-fluid pt-5 pt-md-5 ">
-            <div class="container pt-5">
-                <div class="row align-items-center">
-                    <div class="col-lg-5">
-                        <img class="img-fluid mb-4 mb-lg-0" src="img/LOGO.png" alt="" data-aos="flip-left"
-     data-aos-easing="ease-out-cubic"
-     data-aos-duration="2000"/>
-                    </div>
-                    <div class="col-lg-7">
-                        <div class="px-md-5">
-                            <h1 class="text-uppercase text-blue fw-bold mb-3 letter-spacing font1">
-                                Welcome to Jeevan Dairy
-                            </h1>
-                            <h2 class="mb-3">
-                                <span class="text-darkblue font3"> Your Trusted Source for Quality Milk! </span>
-                            </h2>
+        <!-- About content -->
+        <section>
+            <div class="container-fluid pt-5 pt-md-5 ">
+                <div class="container pt-5">
+                    <div class="row align-items-center">
+                        <div class="col-lg-5">
+                            <img class="img-fluid mb-4 mb-lg-0" src="img/LOGO.png" alt="" data-aos="flip-left"
+                                data-aos-easing="ease-out-cubic" data-aos-duration="2000" />
+                        </div>
+                        <div class="col-lg-7">
+                            <div class="px-md-5">
+                                <h1 class="text-uppercase text-blue fw-bold mb-3 letter-spacing font1">
+                                    Welcome to Jeevan Dairy
+                                </h1>
+                                <h2 class="mb-3">
+                                    <span class="text-darkblue font3"> Your Trusted Source for Quality Milk! </span>
+                                </h2>
 
-                            <p>
-                                At <B>Jeevan-Dairy</B> , we take pride in our commitment to delivering the <I>freshest
-                                    and highest</I> quality milk straight from the heart of <U>Uttar Pradesh</U>. Our
-                                business model revolves around nurturing a symbiotic relationship with local farmers,
-                                ensuring they receive the best rates for their invaluable contributions to our
-                                community.
-                            </p>
+                                <p>
+                                    At <B>Jeevan-Dairy</B> , we take pride in our commitment to delivering the
+                                    <I>freshest
+                                        and highest</I> quality milk straight from the heart of <U>Uttar Pradesh</U>.
+                                    Our
+                                    business model revolves around nurturing a symbiotic relationship with local
+                                    farmers,
+                                    ensuring they receive the best rates for their invaluable contributions to our
+                                    community.
+                                </p>
 
-                            <p>
-                                The heart of our business is a unique and sustainable model that sets us apart. We
-                                believe in the strength of our local farming communities and their ability to produce
-                                exceptional quality milk. <b>Jeevan-Dairy</b> acts as a bridge between these dedicated
-                                farmers and the big dairy giants, creating a seamless supply chain that benefits
-                                everyone involved.
-                            </p>
+                                <p>
+                                    The heart of our business is a unique and sustainable model that sets us apart. We
+                                    believe in the strength of our local farming communities and their ability to
+                                    produce
+                                    exceptional quality milk. <b>Jeevan-Dairy</b> acts as a bridge between these
+                                    dedicated
+                                    farmers and the big dairy giants, creating a seamless supply chain that benefits
+                                    everyone involved.
+                                </p>
 
-                            <!-- <a type="button" class="btn text-white bg-blue" data-mdb-ripple-init href="/about.html"
+                                <!-- <a type="button" class="btn text-white bg-blue" data-mdb-ripple-init href="/about.html"
                                     type="button" data-toggle="modal"> Read More </a> -->
+                            </div>
                         </div>
                     </div>
+
                 </div>
 
             </div>
+        </section>
+        <!--END About content  -->
 
-        </div>
-    </section>
-    <!--END About content  -->
+        <!-- Divider -->
+        <br>
+        <hr class="hr hr-blurry" />
+        <br>
+        <!-- Divider -->
 
-    <!-- Divider -->
-    <br>
-    <hr class="hr hr-blurry" />
-    <br>
-    <!-- Divider -->
+        <!-- Animation on scrolling -->
+        <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
+        <script>
+            AOS.init();
+        </script>
 
-    <!-- Animation on scrolling -->
-    <script src="https://unpkg.com/aos@2.3.1/dist/aos.js"></script>
-    <script>
-        AOS.init();
-    </script>
-
-    <!-- MDB -->
-    <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.0.0/mdb.umd.min.js"></script>
-</body>
+        <!-- MDB -->
+        <script type="text/javascript"
+            src="https://cdnjs.cloudflare.com/ajax/libs/mdb-ui-kit/7.0.0/mdb.umd.min.js"></script>
+    </body>
 
 </html>
